Fix dispatch logic for non private dispatch, which have a transport agency
